Have basic capturing of eye and display on canvas

--- a/www/tracker.html
+++ b/www/tracker.html
@@ -21,4 +21,6 @@
 <a download='heatmap.jpg' id ='heatmap_link'></a>
   <script src='js/tracker.js' type="module"></script>
 <div id='heatmap'></div>
+<canvas id='eye_image_left'></canvas>
+<canvas id='eye_image_right'></canvas>
 </body>
