Basic extraction of eyes from rectangle containing eyes

--- a/www/tracker.html
+++ b/www/tracker.html
@@ -23,4 +23,6 @@
 <div id='heatmap'></div>
 <canvas id='eye_image_left'></canvas>
 <canvas id='eye_image_right'></canvas>
+<br>
+<canvas id='test_canvas'></canvas>
 </body>
