Add info on which participant and video user is on

--- a/www/data/src/webgazerExtractClient.html
+++ b/www/data/src/webgazerExtractClient.html
@@ -19,6 +19,8 @@
     </div>
     <div id="diagDiv">
     <p id="partvidframe"></p>
+    <p id="parcipants_status"></p>
+    <p id="videos_status"></p>
     <p id="wgError"></p>
     <p id="procFPS"></p>
     </div>
