--- a/www/tracker.html
+++ b/www/tracker.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="https://d3js.org/d3.v3.min.js"></script>
 	<script src="./node_modules/heatmap.js/build/heatmap.js"></script>
+	<script src="./node_modules/dom-to-image/dist/dom-to-image.min.js"></script>
 	<script src="./webgazer.js"></script>
 	<script src='js/tracker.js' type="module"></script>
 
