Compare to testing

--- a/www/data/src/webgazerExtractClient.html
+++ b/www/data/src/webgazerExtractClient.html
@@ -25,8 +25,10 @@
     <p id="wgError"></p>
     <p id="procFPS"></p>
     </div>
-    <div id='participants'>
-        <button id='choose_participants' onClick="choose_participants()">choose_participants</button>
+    <div id ='params'>
+        <div id='participants'>
+            <button id='choose_participants' onClick="choose_participants()">choose_participants</button>
+        </div>
     </div>
     
 </BODY>
